<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admindashboard"
    android:background="@color/bg">

    <Button
        android:id="@+id/change_password"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:text="@string/cp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/increase_batch" />

    <Button
        android:id="@+id/view_attendence"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:text="@string/viewattendance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/View_student" />

    <Button
        android:id="@+id/View_student"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:text="@string/viewstudent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_faculty" />

    <Button
        android:id="@+id/view_faculty"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:text="@string/viewfaculty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Assign_faculty" />

    <Button
        android:id="@+id/button"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:text="@string/addfbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:text="@string/addstbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/increase_batch"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:text="@string/increasebatch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_attendence" />

    <Button
        android:id="@+id/Assign_faculty"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:text="@string/assignclass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />
</androidx.constraintlayout.widget.ConstraintLayout>