<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".changepassword"
    android:background="@color/bg">

    <EditText
        android:id="@+id/editText11"
        android:layout_width="243dp"
        android:layout_height="69dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/op"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="243dp"
        android:layout_height="69dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/np"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText11" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="243dp"
        android:layout_height="69dp"
        android:ems="10"
        android:hint="@string/cnp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText12" />

    <Button
        android:id="@+id/button13"
        android:layout_width="230dp"
        android:layout_height="97dp"
        android:layout_marginTop="144dp"
        android:text="@string/cp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText13" />
</androidx.constraintlayout.widget.ConstraintLayout>